Add logs, update prebook and update documentation
