# swagger.json
@@ -56,21 +56,12 @@
           "description": "",
           "parameters": [
             {
-              "name": "body",
               "in": "body",
+              "name": "body",
+              "description": "",
+              "required": true,
               "schema": {
-                "type": "object",
-                "properties": {
-                  "firstName": {
-                    "example": "any"
-                  },
-                  "lastName": {
-                    "example": "any"
-                  },
-                  "email": {
-                    "example": "any"
-                  }
-                }
+                "$ref": "#/definitions/User"
               }
             }
           ],
@@ -594,7 +585,6 @@
           "phoneNumber",
           "company",
           "laptop",
-          "host",
           "time",
           "date",
           "purpose",
@@ -695,10 +685,6 @@
             "type": "string",
             "example": "Some example string"
           },
-          "image": {
-            "type": "string",
-            "example": "Some example string"
-          },
           "department": {
             "type": "string",
             "example": "Some example string"
@@ -714,10 +700,6 @@
           "isAdmin": {
             "type": "boolean",
             "example": true
-          },
-          "createdAt": {
-            "type": "string",
-            "default": "2018-8-3 11:12:40"
           }
         }
       }
@@ -730,7 +712,6 @@
           "phoneNumber",
           "company",
           "laptop",
-          "host",
           "time",
           "date",
           "purpose",
@@ -738,6 +719,10 @@
           "token"
         ],
         "properties": {
+          "id": {
+            "type": "string",
+            "example": "SomeExampleId"
+          },
           "name": {
             "type": "string",
             "example": "Some example string"
@@ -759,7 +744,8 @@
             "example": "Some example string"
           },
           "host": {
-            "type": "id",
+            "type": "object",
+            "$ref": "#/responses/UserMinified",
             "example": "SomeExampleId"
           },
           "time": {
@@ -811,6 +797,10 @@
           "officeNumber"
         ],
         "properties": {
+          "id": {
+            "type": "string",
+            "example": "SomeExampleId"
+          },
           "firstName": {
             "type": "string",
             "example": "Some example string"
@@ -854,6 +844,47 @@
           "createdAt": {
             "type": "string",
             "default": "2018-8-3 11:12:40"
+          }
+        }
+      },
+      "UserMinified": {
+        "required": [
+          "firstName",
+          "lastName",
+          "email",
+          "password",
+          "department",
+          "floor",
+          "officeNumber"
+        ],
+        "properties": {
+          "id": {
+            "type": "string",
+            "example": "SomeExampleId"
+          },
+          "firstName": {
+            "type": "string",
+            "example": "Some example string"
+          },
+          "lastName": {
+            "type": "string",
+            "example": "Some example string"
+          },
+          "email": {
+            "type": "string",
+            "example": "Some example string"
+          },
+          "department": {
+            "type": "string",
+            "example": "Some example string"
+          },
+          "floor": {
+            "type": "string",
+            "example": "3"
+          },
+          "officeNumber": {
+            "type": "string",
+            "example": "12"
           }
         }
       },
